@@ -17,6 +17,8 @@ New Features:
     capability can be configured from the parser tab of the Special:Admin page.
   * Use the database rather than the search engine to generate results for the
     Special:LinkTo page.
+  * SEO optimizations: return HTTP 404 when requesting a page for a topic that
+    does not exist, and specify the "canonical" meta tag for redirected topics.
   * Remove ability to automatically upgrade from versions prior to 0.8.0.
   * Remove unused/obsolete Javascript and namespace the remaining code.
   * Upgrade to Spring Framework 3.0.3.RELEASE.
